# Vacs4Devs

./: .gitignore  docker-compose.yml  local-docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
app/: pyproject.toml
app/src/: __init__.py  config.py
fastapi-app/: Dockerfile  alembic.ini  pyproject.toml
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 2025-03-05_00_create_companies_table.py  2025-03-05_12_create_vacs_table.py  2025-03-12_16_fill_company_table.py  2025-03-13_17_create_subscriber.py
fastapi-app/src/: __init__.py  choices.py  config.py  constants.py  database.py  jobs.py  main.py  models.py  parsers.py  utils.py
fastapi-app/src/api/: __init__.py  router.py
fastapi-app/src/api/endpoints/: __init__.py  companies.py  subscribers.py  vacancies.py
fastapi-app/src/db_crud/: companies.py  subscribers.py  vacancies.py
fastapi-app/src/schemas/: __init__.py  companies.py  subscribers.py  vacancies.py
tests/: conftest.py  test_cruds.py  test_endpoints.py  test_parsers.py
