[project]
name = "vacs4devs"
version = "0.1.0"
description = ""
authors = [
    {name = "NOYON",email = "ivan.sheremet.ss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "openai (>=1.65.3,<2.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "chromedriver-py (>=133.0,<133.1)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
