[tool.poetry]
name = "vacs4devs"
version = "0.1.0"
description = "Vacs4devs project"
authors = ["NOYON <ivan.sheremet.ss@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
alembic = "^1.15.1"
bs4 = "^0.0.2"
openai = "^1.65.5"
selenium = "^4.29.0"
apscheduler = "3.10.4"
asyncio-redis = "0.16.0"
redis = "5.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-asyncio = "^0.25.3"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
